scanner1 scanner2:fixed title closing tag

--- a/scanner1.html
+++ b/scanner1.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv=content-type content="text/html; charset=UTF-8">
-<title>Сбросить результаты<title>
+<title>Сбросить результаты</title>
 </head>
 <body>
 <div id=r>
