--- a/scanner4.html
+++ b/scanner4.html
@@ -63,7 +63,7 @@ $i('r').appendChild(tbl);
 for(var kk=0;kk<10;kk++)
 {
 	var ii=Array();
-	var ks='a'+kk.toString();
+	var ks='A'+kk.toString();
 	ii.push({l:ks,r:code128l('a',ks,'1mm','15mm',1)});
 	tbl.appendChild(gentr2(ii));
 }
