--- a/scanner4.html
+++ b/scanner4.html
@@ -57,7 +57,7 @@ function spacer()
 
 var n=document.createElement('div');
 $i('r').appendChild(n);
-n.appendChild(document.createTextNode('Цифры'));
+n.appendChild(document.createTextNode('Зона'));
 var tbl=document.createElement('table');
 $i('r').appendChild(tbl);
 for(var kk=0;kk<10;kk++)
